--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "ipython>=9.9.0",
+    "jupyterlab>=4.5.1",
+    "matplotlib>=3.10.8",
+    "pandas>=2.3.3",
+    "seaborn>=0.13.2",
+    "torch>=2.9.1",
+    "transformers>=4.57.3",
+]
