--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,18 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipython>=9.9.0",
+    "ipywidgets>=8.1.8",
     "jupyterlab>=4.5.1",
+    "loguru>=0.7.3",
     "matplotlib>=3.10.8",
     "pandas>=2.3.3",
+    "python-dotenv>=1.2.1",
     "seaborn>=0.13.2",
     "torch>=2.9.1",
     "transformers>=4.57.3",
+]
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.5.1",
 ]
