--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "accelerate>=1.12.0",
+    "asyncio>=4.0.0",
     "ipython>=9.9.0",
     "ipywidgets>=8.1.8",
     "jupyterlab>=4.5.1",
