--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "loguru>=0.7.3",
     "matplotlib>=3.10.8",
     "pandas>=2.3.3",
+    "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "seaborn>=0.13.2",
     "torch>=2.9.1",
